# presentations-relops

./: README.md  intro.md
src/: .clang-format  CMakeLists.txt  canonical-definition-c++20.cpp  canonical-definition.cpp  cquantity-bad.cpp  cquantity-c++20.cpp  cquantity-good-c++20.cpp  cquantity-good.cpp
